Reference code and license

--- a/assets/chapter1.tex
+++ b/assets/chapter1.tex
@@ -36,7 +36,7 @@ Es entonces cuando surge la necesidad de la creación de un sistema de optimizac
 
 De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones vinculadas a la entidad energética pertinente a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de licitación manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol, previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
 
-Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, aspectos fundamentales de la operación de los que disponía previamente la entidad energética propietaria de los activos), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha a gran escala en las instalaciones y la experimentación comparativa en busca del mejor modo de operación.
+Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, aspectos fundamentales de la operación de los que disponía previamente la entidad energética propietaria de los activos), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha a gran escala en las instalaciones y la experimentación comparativa en busca del mejor modo de operación. El código disponible no confidencial censurado está disponible en GitHub\footnote{\url{https://github.com/josugoar/optibat} (unlicensed)}.
 
 De esta forma, el sistema se divide en los apartados anteriormente mencionados. Primeramente, el estado de la cuestión es analizado en el capítulo~\ref{makereference2}. La infraestructura operacional, explicada en el capítulo~\ref{makereference3}, gestiona la capa de interacción de menor nivel disponible. El entorno de mercado, especificado en el capítulo~\ref{makereference4}, determina la información extraída de las instituciones regulatorias con las que se trabaja. La modelización estructural, puntualizada en el capítulo~\ref{makereference5}, habla de la lógica de negocio de las decisiones a tomar. El comando y control, precisado en el capítulo~\ref{makereference6}, explica el flujo de vuelta a los activos físicos y la interacción de los agentes de mercado y operadores de telecontrol con el sistema. Posteriormente, se describe la experimentación realizada en el capítulo~\ref{makereference7}. Finalmente, se presentan las conclusiones en el capítulo~\ref{makereference8}.
 
