--- a/assets/chapter10.tex
+++ b/assets/chapter10.tex
@@ -20,7 +20,7 @@ Finally, the command and control of the system have been appropriately specified
 
 With this, energy arbitrage in the market has been enabled for the installations the system has been deployed at. If it were not for it, as the market operator had was no other alternative solution currently deployed on the iberian market, the installations to be controlled would have lost the arbitrage opportunities or would have to be commanded manually by telecommunication operators, an absolutely inadmissible situation due to the complexity of the whole operation.
 
-It is noteworthy that both battery energy storage systems and, therefore, cross-market battery optimization systems, are still in their infancy, at least in Europe. Precisely, according to a study on the use of storage technologies~\cite{hu2022potential}, ``the main energy storage system in Europe is still pumped hydroelectricity''. This means that, seeing how the landscape of electrical technologies is increasingly focusing on these battery technologies, it is likely that more sophisticated control systems will come to market. Although, currently, installations with battery energy storage systems are few and far between compared to the rest, market operators seek to incorporate them in all renewable installations to improve energy utilization. Therefore, while the implemented system has been successfully deployed throughout the country, it may be necessary to take new considerations in this regard and take into account said alternatives when the daily cycled energy might equal or exceed the amount of other wel -established energy assets'.
+It is noteworthy that both battery energy storage systems and, therefore, cross-market battery optimization systems, are still in their infancy, at least in Europe. Precisely, according to a study on the use of storage technologies~\cite{hu2022potential}, ``the main energy storage system in Europe is still pumped hydroelectricity''. This means that, seeing how the landscape of electrical technologies is increasingly focusing on these battery technologies, it is likely that more sophisticated control systems will come to market. Although, currently, installations with battery energy storage systems are few and far between compared to the rest, market operators seek to incorporate them in all renewable installations to improve energy utilization. Therefore, while the implemented system has been successfully deployed throughout the country, it may be necessary to take new considerations in this regard and take into account said alternatives when the daily cycled energy might equal or exceed the amount of other well established energy assets'. The non-confidential censored code is available on GitHub\footnote{\url{https://github.com/josugoar/optibat}}.
 
 \section*{Future work}
 
