--- a/assets/chapter8.tex
+++ b/assets/chapter8.tex
@@ -28,7 +28,7 @@ Por último, se ha definido apropiadamente el comando y control del sistema, en 
 
 De esta forma, se ha habilitado el arbitraje de energía en el mercado en las instalaciones controladas. De no ser por el sistema desarrollado, al no existir ninguna otra solución alternativa desplegada en la península en la actualidad, las instalaciones a controlar registradas en el mercado tendrían que perder las oportunidades de arbitraje correspondientes o ser comandadas manualmente por los operarios de telecontrol, situación absolutamente inadmisible debido a la complejidad de la operación.
 
-Cabe destacar que tanto los \glspl{bess} como, por lo tanto, los sistemas de optimización de baterías en el mercado eléctrico, se encuentran todavía en su infancia, por lo menos en el territorio europeo. Precisamente, según un estudio sobre el uso de las tecnologías de almacenamiento~\cite{hu2022potential}, ``el principal sistema de almacenamiento de energía en Europa sigue siendo el bombeo hidroeléctrico''. Esto significa que, viendo como el panorama de las tecnologías eléctricas pone su foco cada vez más en estas tecnologías de almacenamiento, es probable que salgan al mercado sistemas más sofisticados de control. Aunque, actualmente, las instalaciones con \glspl{bess} sean pocas en comparación al resto, las entidades energéticas buscan implantarlas en toda las instalaciones de generación para mejorar el aprovechamiento de la energía. Por ello, si bien el sistema implantado ha sido satisfactoriamente desplegado a lo largo de todo el país, quizás sea necesario tomar nuevas consideraciones al respecto y tener en cuenta dichas alternativas cuando la energía ciclada diariamente iguale o supere las cantidades de las de otros activos energéticos ampliamente asentados.
+Cabe destacar que tanto los \glspl{bess} como, por lo tanto, los sistemas de optimización de baterías en el mercado eléctrico, se encuentran todavía en su infancia, por lo menos en el territorio europeo. Precisamente, según un estudio sobre el uso de las tecnologías de almacenamiento~\cite{hu2022potential}, ``el principal sistema de almacenamiento de energía en Europa sigue siendo el bombeo hidroeléctrico''. Esto significa que, viendo como el panorama de las tecnologías eléctricas pone su foco cada vez más en estas tecnologías de almacenamiento, es probable que salgan al mercado sistemas más sofisticados de control. Aunque, actualmente, las instalaciones con \glspl{bess} sean pocas en comparación al resto, las entidades energéticas buscan implantarlas en toda las instalaciones de generación para mejorar el aprovechamiento de la energía. Por ello, si bien el sistema implantado ha sido satisfactoriamente desplegado a lo largo de todo el país, quizás sea necesario tomar nuevas consideraciones al respecto y tener en cuenta dichas alternativas cuando la energía ciclada diariamente iguale o supere las cantidades de las de otros activos energéticos ampliamente asentados. El código disponible no confidencial censurado está disponible en GitHub\footnote{\url{https://github.com/josugoar/optibat} (unlicensed)}
 
 \section{Trabajo futuro}%
 \label{makereference8.2}
