--- a/assets/chapter9.tex
+++ b/assets/chapter9.tex
@@ -20,7 +20,7 @@ It is just then that the need for the creation of a battery optimization system 
 
 In fact, this is how \textsc{Optibat} is born, the self developed battery optimization system in the electricity market, successfully deployed in multiple energy installations throughout the country, which cycles dozens of megawatt hours per day and generates millions of euros in projected annual revenue. It manages to solve the manual bidding work of market agents and telecommunications operators, previously necessary for incorporating the batteries' positions into the market.
 
-With this, the design decisions related to the integration of the system and the components of the existing architecture are detailed (that is, fundamental aspects of the operation that the market operator, owning the energy assets, has previously available), along the development of all the elements to be taken into account, the validation to ensure safety and correct operation, the deployment in relation to the commissioning in large scale installations, and the comparative experimentation in search of the best mode of operation.
+With this, the design decisions related to the integration of the system and the components of the existing architecture are detailed (that is, fundamental aspects of the operation that the market operator, owning the energy assets, has previously available), along the development of all the elements to be taken into account, the validation to ensure safety and correct operation, the deployment in relation to the commissioning in large scale installations, and the comparative experimentation in search of the best mode of operation. The non-confidential censored code is available on GitHub\footnote{\url{https://github.com/josugoar/optibat}}.
 
 This way, the system is divided into the aforementioned sections. Firstly, the state of the art is introduced in Chapter~\ref{makereference2}. The operational infrastructure, explained in Chapter~\ref{makereference3}, manages the lowest level interaction layer available. The market environment, specified in Chapter~\ref{makereference4}, determines the information extracted from the regulatory institutions with which it communicates with. The structural modeling, detailed in Chapter~\ref{makereference5}, discusses the business logic of the decisions to be made. The command and control, specified in Chapter~\ref{makereference6}, explains the feedback loop to the physical assets and the interaction of market agents and telecommunications operators with the system. Finally, the carried out experiments are described in Chapter~\ref{makereference7} and the conclusions in Chapter~\ref{makereference8}.
 
