Add diagram captions

--- a/assets/chapter3.tex
+++ b/assets/chapter3.tex
@@ -20,13 +20,12 @@ Como es entendible, el desarrollo ha hecho uso de la infraestructura operacional
 
 Por ello, la principal contribución del apartado de la infraestructura operacional se ve reflejada en la configuración, securización, despliegue y validación de la herramienta de conexión entre los activos físicos y del historiador del \gls{pis}, a través de los correspondientes protocolos de comunicación posteriormente descritos. Se busca la integración estandarizada con los componentes ya existentes, para el correcto funcionamiento de las instalaciones que alojan los \glspl{bess}, mientras se tiene en cuenta que los sistemas de almacenamiento apenas son una pequeña parte de la red al completo.
 
-De esta forma, es posible obtener una visión más completa a través del análisis realizado en la sección~\ref{makereference3.1}, que define la arquitectura de la disposición de los activos energéticos y las múltiples restricciones operativas fundamentales tenidas en cuenta por el desarrollo. También, se examinan los componentes físicos que forman parte de la infraestructura al completo, detallados en la sección~\ref{makereference3.2}, que actúan como la fuente primaria de la obtención de datos. Además, se explora la comunicación que unifica estos componentes en la sección~\ref{makereference3.3},  facilitando un intercambio de datos estandarizado. Con esto, se describe la gestión de la información obtenida en la sección~\ref{makereference3.4}, detallando su rol en el almacenamiento, la gestión y la validación de los datos operativos. Por último, se explica como los datos de la infraestructura obtenidos son transformados y consumidos en la sección~\ref{makereference3.5}.
+De esta forma, es posible obtener una visión más completa a través del análisis realizado en la sección~\ref{makereference3.1}, que define la arquitectura de la disposición de los activos energéticos y las múltiples restricciones operativas fundamentales tenidas en cuenta por el desarrollo. También, se examinan los componentes físicos que forman parte de la infraestructura al completo, detallados en la sección~\ref{makereference3.2}, que actúan como la fuente primaria de la obtención de datos. Además, se explora la comunicación que unifica estos componentes en la sección~\ref{makereference3.3},  facilitando un intercambio de datos estandarizado. Con esto, se describe la gestión de la información obtenida en la sección~\ref{makereference3.4}, detallando su rol en el almacenamiento, la gestión y la validación de los datos operativos. Por último, se explica como los datos de la infraestructura obtenidos son transformados y consumidos en la sección~\ref{makereference3.5}. El flujo de información de la infraestructura operacional se representa en la figura~\ref{fig:arquitectura-infraestructura}.
 
-% TODO
 \begin{figure}
   \centering
   \includegraphics[width=\linewidth]{figures/arquitectura-infraestructura.png}
-  \caption[Arquitectura de la infraestructura operacional.]{Arquitectura de la infraestructura operacional.}%
+  \caption[Arquitectura de la infraestructura operacional.]{Arquitectura del flujo de información de la infraestructura operacional, diferenciando los elementos pertinentes al proyecto. Se muestra la localización de cada uno de los componentes relacionados con la infraestructura operacional en las redes \gls{ot}, \gls{idmz} e \gls{it}, separadas por \textit{firewalls}. En la red operacional, la comunicación de las señales provenientes del \gls{bms} se realiza entre la \gls{rtu} y el \gls{pis} a través de IEC 60870{-}5{-}104. En la red desmilitarizada, el PI Connector para IEC 60870{-}5{-}104 desplegado actúa como \textit{gateway} y enruta la información al PI Server. En la red informacional, el optimizador, dotado del PI AF SDK, se encarga de sobrepasar la barrera entre redes mediante el \textit{interop} entre \.NET y Python. Además, se señala la existencia de un flujo alternativo del sistema SCADA externo, que destaca el planteamiento directo usado al no requerir de una capa de indirección entre el SCADA y el \gls{pis}.}%
   \label{fig:arquitectura-infraestructura}
 \end{figure}
 
