--- a/assets/chapter4.tex
+++ b/assets/chapter4.tex
@@ -14,19 +14,18 @@ Para que el sistema de optimización de baterías funcione de manera efectiva, n
   \label{fig:esquema-mercado}
 \end{figure}
 
-Por tanto, se define el análisis de las fuentes de información de mercado y los procesos desarrollados para su adquisición, tratamiento e integración. Concretamente, el sistema de optimización requiere de cuatro categorías fundamentales de datos externos. Los precios del mercado son esenciales para formular previsiones estratégicas. La energía negociada es clave para la liquidación de beneficios y la gestión de desvíos. Las limitaciones operativas imponen restricciones de obligado cumplimiento. La situción meteorológica indica las previsiones de la generación.
+Por tanto, se define el análisis de las fuentes de información de mercado y los procesos desarrollados para su adquisición, tratamiento e integración. Concretamente, el sistema de optimización requiere de cuatro categorías fundamentales de datos externos. Los precios del mercado son esenciales para formular previsiones estratégicas. La energía negociada es clave para la liquidación de beneficios y la gestión de desvíos. Las limitaciones operativas imponen restricciones de obligado cumplimiento. La situación meteorológica indica las previsiones de la generación.
 
 De esta forma, se pretende describir el origen de estas fuentes de datos, las reglas que gobiernan su publicación y acceso, y la arquitectura implementada para consumirlos de manera programática y robusta.
 
 Con esto, para facilitar la comprensión de las secciones posteriores, se reiteran los siguientes conceptos. Las \glspl{ufi} son identificadores lógicos que definen los puntos de intercambio de energía. A diferencia de un punto físico en la red, una \gls{ufi} es una referencia contractual para las operaciones de mercado, con la condición indispensable de que toda transacción debe estar respaldada por un flujo de energía físicamente viable. Las \glspl{up} son los identificadores del \gls{tso} de las instalaciones al completo y resultan los activos que se arbitran en el mercado. Las \glspl{uof} son los identificadores equivalentes del \gls{mo}. Es decir, las operaciones de las \glspl{ufi} que engloba una \gls{up} o \gls{uof} se agregan a la hora de realizar la oferta.
 
-Para ello, primeramente se presenta \gls{omie} como la fuente primordial de datos de mercado, detallando los mecanismos de obtención de precios y la naturaleza de la información de la energía negociada, como se describe en el apartado~\ref{makereference4.1}. A continuación, se habla de la información proveniente de \gls{ree}, que impone las limitaciones de programa de operación en tiempo real, como se explica en la sección~\ref{makereference4.2}. Finalmente, el apartado~\ref{makereference4.3} detalla como se consolidan estas diversas fuentes de datos para formar una visión unificada que sirva de entrada al sistema.
+Para ello, primeramente se presenta \gls{omie} como la fuente primordial de datos de mercado, detallando los mecanismos de obtención de precios y la naturaleza de la información de la energía negociada, como se describe en el apartado~\ref{makereference4.1}. A continuación, se habla de la información proveniente de \gls{ree}, que impone las limitaciones de programa de operación en tiempo real, como se explica en la sección~\ref{makereference4.2}. Finalmente, el apartado~\ref{makereference4.3} detalla como se consolidan estas diversas fuentes de datos para formar una visión unificada que sirva de entrada al sistema. El flujo de información del entorno de mercado se representa en la figura~\ref{fig:arquitectura-mercado}.
 
-% TODO
 \begin{figure}
   \centering
-  \includegraphics[height=0.75\textheight]{figures/arquitectura-mercado.png}
-  \caption[Arquitectura del entorno de mercado.]{Arquitectura del entorno de mercado.}%
+  \includegraphics[height=0.7\textheight]{figures/arquitectura-mercado.png}
+  \caption[Arquitectura del entorno de mercado.]{Arquitectura del flujo de información del entorno de mercado, diferenciando los elementos pertinentes al proyecto. Las tareas temporizadas según el horario de mercado de la obtención de datos de \gls{omie} y \gls{ree} obtienen los ficheros de precios marginales, energía negociada y limitaciones de programa a través de la plataforma FTP del \gls{mo} y ESIOS del \gls{tso}. Una vez se han consultado los desgloses de programa para transformar las unidades de \gls{up} a \gls{ufi}, se procesan las entradas y se depositan los resultados de las inserciones al \gls{dw} en el intercambiador de ficheros en formato CSV\@. Después de que un proceso \gls{etl} externo termine cargándolos en base de datos, estos son consultados por el optimizador mediante SQL, junto con la situación meteorológica. Se tiene en cuenta también la posibilidad de introducir información manualmente a las tareas de mercado, ante posibles contratiempos en las fuentes de información.}%
   \label{fig:arquitectura-mercado}
 \end{figure}
 
