--- a/assets/chapter5.tex
+++ b/assets/chapter5.tex
@@ -13,13 +13,12 @@ Para ello, se ha elegido Pyomo\footnote{\url{https://github.com/Pyomo/pyomo} (BS
 
 Se hace uso de una formulación de \gls{milp} para poder tener en cuenta condiciones más allá de la más simple \gls{lp}. Se ha explorado el uso de indicadores o restricciones avanzadas, como los \textit{special order sets}, los cuales han sido descartados en última instancia debido a problemas de rendimiento. Esto significa que la modelización es puramente de enteros mixta compatible con cualquier resolutor que soporte variables binarias, siendo GLPK\footnote{\url{https://www.gnu.org/software/glpk/} (GPL-3.0)} el elegido.
 
-De esta forma, se detallan los parámetros de decisión en la sección~\ref{makereference5.1}, que articulan el problema de optimización, abarcando desde la definición temporal de los periodos del mercado y las variables de operación de los flujos energéticos, hasta las limitaciones impuestas por el comportamiento físico de la batería y las guías estratégicas de las indicaciones de mercado. Se procede a formular las restricciones operacionales que aseguran la viabilidad técnica de la solución en la sección~\ref{makereference5.2}, se establece el criterio de desempeño que define la función objetivo a optimizar en la parte~\ref{makereference5.3} y, finalmente, se consideran los requisitos de la resolución numérica para cumplir con la precisión exigida por el operador del mercado en la sección~\ref{makereference5.4}.
+De esta forma, se detallan los parámetros de decisión en la sección~\ref{makereference5.1}, que articulan el problema de optimización, abarcando desde la definición temporal de los periodos del mercado y las variables de operación de los flujos energéticos, hasta las limitaciones impuestas por el comportamiento físico de la batería y las guías estratégicas de las indicaciones de mercado. Se procede a formular las restricciones operacionales que aseguran la viabilidad técnica de la solución en la sección~\ref{makereference5.2}, se establece el criterio de desempeño que define la función objetivo a optimizar en la parte~\ref{makereference5.3} y, finalmente, se consideran los requisitos de la resolución numérica para cumplir con la precisión exigida por el operador del mercado en la sección~\ref{makereference5.4}. El flujo de información de la modelización estructural se representa en la figura~\ref{fig:arquitectura-modelizacion}.
 
-% TODO
 \begin{figure}
   \centering
-  \includegraphics[height=0.75\textheight]{figures/arquitectura-modelizacion.png}
-  \caption[Arquitectura de la modelización estructural.]{Arquitectura de la modelización estructural.}%
+  \includegraphics[width=0.5\linewidth]{figures/arquitectura-modelizacion.png}
+  \caption[Arquitectura de la modelización estructural.]{Arquitectura del flujo de información de la modelización estructural, diferenciando los elementos pertinentes al proyecto. El optimizador temporizado según las sesiones de mercado obtiene la información del entorno de mercado del \gls{dw} y las señales de los activos energéticos del \gls{pis}. Una vez ha sido apropiadamente configurado o se le ha introducido opcionalmente la posición manual a ejecutar, realiza el proceso de optimización siguiendo la formulación matemática de las instalaciones. Finalmente, transmite los resultados de los flujos energéticos calculados al controlador para su consignado y licitación posterior.}%
   \label{fig:arquitectura-modelizacion}
 \end{figure}
 
